"merging the singleton design pattern with the memento design pattern for better functionality and efficiency"